# deeplearning

./: README.md  requirements.txt
1_intro/: Soluntion.ipynb  TwoLayerNet.pt  pytorch_intro.ipynb  readme.txt  utils.py
2_core_concepts/: Device nam PC-1.txt  helpers.py  practical_DL.ipynb  sanity_checks.py  training.py
3_cnn/: CNN.ipynb  config.py  metrics.py  tests.py  training.py  utils.py  visualization.py  voc_dataset.py
3_cnn/semantic_segmentation/: __init__.py  backbones.py  classifiers.py
4_rnns/: RNN.ipynb
4_rnns/configs/: lm_config.py  nmt_config.py
4_rnns/models/: mini_lm.py  nmt.py
4_rnns/tests/: lm_sanity_checks.py  nmt_sanity_checks.py
4_rnns/trainers/: lm_trainer.py  nmt_trainer.py
5_transformers/: Transformer.ipynb
5_transformers/configs/: lm_config.py  nmt_config.py  transformer_config.py
5_transformers/models/: beam_search.py  gpt.py  initialization.py  modules.py  transformer.py
5_transformers/tests/: lm_sanity_checks.py  nmt_sanity_checks.py
5_transformers/trainers/: lm_trainer.py  nmt_trainer.py  utils.py
6_captioning_finetuning/: Finetuning.ipynb  model.py  trainer.py  utils.py
6_large_scale_learning/: 6_large_scale_learning.ipynb  data.csv  utils.py
6_large_scale_learning/tests/: sanity_checks.py
exercise-utils/: pyproject.toml
exercise-utils/src/exercise_utils/: core.py  old core.py
exercise-utils/src/exercise_utils/nlp/lm/: dataset.py  tokenizer.py  utils.py
exercise-utils/src/exercise_utils/nlp/nmt/: dataset.py  tokenizer.py  utils.py
testing/: Wrangling.py
(+2 files in other folders)
