[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercise-utils"
version = "0.1.0"
description = "Utility functions for the Deep Learning course exercises"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
]
